// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - spring-cache caffeine-gradle should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "gradle/cache.gradle": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache caffeine-maven should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache ehcache-gradle should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "gradle/cache.gradle": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache ehcache-maven should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache hazelcast-gradle should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "gradle/cache.gradle": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache hazelcast-maven should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache infinispan-gradle should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "gradle/cache.gradle": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheFactoryConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache infinispan-maven should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheFactoryConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache memcached-gradle should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "gradle/cache.gradle": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache memcached-maven should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache redis-gradle should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "gradle/cache.gradle": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/EmbeddedRedis.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/RedisTestContainer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/RedisTestContainersSpringContextCustomizerFactory.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-cache redis-maven should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/EmbeddedRedis.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/RedisTestContainer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/RedisTestContainersSpringContextCustomizerFactory.java": {
    "stateCleared": "modified",
  },
}
`;
